--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,10 +1,60 @@
 body {
+    margin: 0 auto;
     background-color: lightgray;
     color: black;
+    line-height: 1.7em;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 .container {
     margin: 0 auto;
     max-width: 1200px;
     background-color: white;
+}
+
+header {
+    background-color: darkslategrey;
+    color: white;
+}
+
+header h1 {
+    text-align: center;
+    margin-top: 0;
+    padding-top: 10px;
+}
+
+nav {
+    background-color: white;
+}
+
+nav ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+nav ul li {
+    display: inline-block;
+    margin-right: -5px;
+}
+
+nav ul li a {
+    display: inline-block;
+    text-decoration: none;
+    color: black;
+    padding: 10px 33px;
+}
+
+nav ul li a:hover {
+    background-color: rgba(0, 0, 0, 0.2);
+    color: black;
+}
+
+.current-page {
+    background-color: darkslategrey;
+    color:white;
+}
+
+main {
+    padding: 1em;
 }
