--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -52,9 +52,55 @@ nav ul li a:hover {
 
 .current-page {
     background-color: darkslategrey;
-    color:white;
+    color: white;
 }
 
 main {
     padding: 1em;
+}
+
+main.image-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
+}
+
+main.image-grid h1 {
+    grid-area: 1 / 1 / 2 / 3;
+}
+
+main.image-grid .imgOne {
+    grid-area: 2 / 1 / 3 / 2;
+    justify-self: center;
+}
+
+main.image-grid .imgTwo {
+    grid-area: 2 / 2 / 3 / 3;
+    justify-self: center;
+}
+
+main.image-grid .imgThree {
+    grid-area: 3 / 1 / 4 / 2;
+    justify-self: center;
+}
+
+main.image-grid .imgFour {
+    grid-area: 3 / 2 / 4 / 3;
+    justify-self: center;
+}
+
+main.image-grid .imgFive {
+    grid-area: 4 / 1 / 5 / 2;
+    justify-self: center;
+}
+
+main.image-grid .imgSix {
+    grid-area: 4 / 2 / 5 / 3;
+    justify-self: center;
+}
+
+main img {
+    width: 100%;
+    height: auto;
+    max-width: 500px;
 }
