--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -20,9 +20,11 @@ header {
 header h1 {
     text-align: center;
     margin-top: 0;
-    padding-top: 10px;
+    padding: 4%;
+    margin-bottom: 0;
 }
 
+/*Main navigation*/
 nav {
     background-color: white;
 }
@@ -53,6 +55,10 @@ nav ul li a:hover {
 .current-page {
     background-color: darkslategrey;
     color: white;
+}
+
+#hamburgerMenu {
+    display: none;
 }
 
 main {
@@ -98,4 +104,54 @@ main img {
     width: 100%;
     height: auto;
     max-width: 500px;
+}
+
+@media screen and (max-width: 600px) {
+    /*Styling hamburger menu*/
+    #hamburgerMenu {
+        display: inline-block;
+        cursor: pointer;
+    }
+
+    .bar1,
+    .bar2,
+    .bar3 {
+        width: 35px;
+        height: 5px;
+        background-color: white;
+        margin: 6px 0;
+        transition: 0.4s;
+    }
+
+    .change .bar1 {
+        transform: translate(0, 11px) rotate(-45deg);
+    }
+
+    .change .bar2 {
+        opacity: 0;
+    }
+
+    .change .bar3 {
+        transform: translate(0, -11px) rotate(45deg);
+    }
+
+    /*Main navigation*/
+    nav ul li {
+        display: block;
+        text-align: center;
+    }
+
+    nav ul li a {
+        display: block;
+    }
+
+    header .topNav {
+        display: flex;
+        justify-content: space-between;
+        padding: 1em;
+    }
+
+    nav {
+        display: none;
+    }
 }
