--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,6 +4,7 @@ body {
     color: black;
     line-height: 1.7em;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 1.2em;
 }
 
 .container {
@@ -22,6 +23,17 @@ header h1 {
     margin-top: 0;
     padding: 4%;
     margin-bottom: 0;
+}
+
+header a {
+    text-decoration: none;
+    color: white;
+}
+
+footer {
+    padding: 1em;
+    background-color: darkslategrey;
+    color: white;
 }
 
 /*Main navigation*/
@@ -61,6 +73,7 @@ nav ul li a:hover {
     display: none;
 }
 
+/*Main settings*/
 main {
     padding: 1em;
 }
@@ -107,6 +120,14 @@ main img {
 }
 
 @media screen and (max-width: 600px) {
+    body {
+        font-size: 1em;
+    }
+
+    header h1 {
+        padding: 0;
+    }
+
     /*Styling hamburger menu*/
     #hamburgerMenu {
         display: inline-block;
